--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,5 @@
 <div class="container-scroller">
-  <!-- <app-login></app-login> -->
-  <!-- <app-register></app-register> -->
-<app-navbar></app-navbar>
-  <div class="page-body-wrapper">
-    <app-sidebar>
-      
-    </app-sidebar>
-    <div class="main-panel">
-      <div class="content-wrapper"></div>
+  <router-outlet></router-outlet>
 
 
-
-      <app-footer></app-footer>
-    </div>
-  </div>
 </div>
