--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -37,7 +37,7 @@
                             <span class="text-small font-weight-semibold">No estas registrado?
                             </span>
                             <br />
-                            <a href="" class="text-black text-small">Crear una cuenta</a>
+                            <a [routerLink]="['/register']" class="text-black text-small">Crear una cuenta</a>
                         </div>
                     </form>
                 </div>
