--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -6,7 +6,7 @@
       <div class="col-lg-4 mx-auto">
         <h2 class="text-center mb-4" style="color: white">Ingresar</h2>
         <div class="auto-form-wrapper">
-          <form #formLogin (ngSubmit)="this.formLogin">
+          <form #formLogin="ngForm" (ngSubmit)="this.loginUsuario(this.formLogin.value)">
             <div class="form-group">
               <label class="label">Usuario</label>
               <div class="input-group">
@@ -42,7 +42,7 @@
               </div>
             </div>
             <div class="form-group">
-              <button [disabled]="formLogin.invalid" class="btn btn-primary submit-btn btn-block">
+              <button [disabled]="this.formLogin.invalid" class="btn btn-primary submit-btn btn-block">
                 Login
               </button>
             </div>
