--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -61,8 +61,20 @@
             </div>
 
             <div class="form-group">
-              <button [disabled]="form.invalid" class="btn btn-primary submit-btn btn-block ">
+              <button
+                *ngIf="!getCargando()"
+                [disabled]="form.invalid"
+                class="btn btn-primary submit-btn btn-block"
+              >
                 Crear cuenta
+              </button>
+              <button
+                *ngIf="getCargando()"
+                [disabled]="true"
+                class="btn btn-primary submit-btn btn-block"
+              >
+                <i class="fas fa-spin fa-sync"></i>
+                Espere....
               </button>
             </div>
             <div class="text-block text-center my-3">
