--- a/src/app/ingreso-egreso/detalle/detalle.component.html
+++ b/src/app/ingreso-egreso/detalle/detalle.component.html
@@ -22,7 +22,7 @@
                   <td> 
                     <span [ngClass]="ingresoEgreso.tipo === 'ingreso'?'text-success':'text-danger' ">
 
-                      {{ ingresoEgreso.tipo}}
+                      {{ ingresoEgreso.tipo | uppercase}}
                     </span>
                   </td>
 
